objects/ssot__ActionPlanTemplateItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionPlanTemplateVersionId__c</fullName>
        <label>Action Plan Template Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisplayOrderNumber__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Action Plan Template Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ItemEntityTypeId__c</fullName>
        <label>Item Entity Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemEntityTypeObject__c</fullName>
        <label>Item Entity Type Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueNameText__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818168196_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplateItem_ActionPlanTem_rel</label>
        <referenceTo>ssot__ActionPlanTemplateVersion__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplateItem_ActionPlanTem_rel</relationshipLabel>
        <relationshipName>rel_1719818168196_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818627257_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplateItem_ItemEntityTyp_rel</label>
        <referenceTo>ssot__ApplicationTask__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplateItem_ItemEntityTyp_rel</relationshipLabel>
        <relationshipName>rel_1719818627257_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>